# arc

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_MANIFEST.json  THIRD_PARTY_NOTICES.md  env.fish  env.sh  package-lock.json  package.json  pyproject.toml  sdkconfig.defaults  sdkconfig.defaults.psram  sdkconfig.defaults.release
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  firmware_validation.yml
.github/workflows/: build.yml  codeql.yml  pages.yml
.zed/: settings.json
cmake/: arc-deps.cmake  arc-idf.cmake
components/arc/: CMakeLists.txt  profiles.json
components/arc/include/: arc.hpp
components/arc/include/arc/: acoustic_slam.hpp  adc.hpp  aes.hpp  any.hpp  assume.hpp  audit.hpp  axi_graph.hpp  bare_core.hpp  bft.hpp  blackbox.hpp  ble.hpp  ble_mesh.hpp  borrow.hpp  bridge.hpp  burst.hpp  bus.hpp  cache.hpp  cache_lock.hpp  can.hpp  caps.hpp  capture.hpp  cert_bundle.hpp  cfg.hpp  chaos.hpp  claim.hpp  cli.hpp  cloak.hpp  clock.hpp  cnc.hpp  coap.hpp  concepts.hpp  copy.hpp  core.hpp  coro.hpp  count.hpp  covert.hpp  crdt.hpp  crypto.hpp  crypto_dma.hpp  crypto_selftest.hpp  (+183 more)
components/arc/include/arc/arch/: riscv.hpp  xtensa.hpp
components/arc/include/arc/detail/: cold.hpp  owner.hpp  quant.hpp  scoped_result.hpp
components/arc/include/arc/soc/: esp32p4.hpp  esp32s3.hpp  esp32s31.hpp  target.hpp
docs/: api-naming.md  api.md  architecture.md  benchmarking.md  examples.md  getting-started.md  glossary.md  governance.md  hil-test-jig.md  index.md  licensing.md  module-pages.md  modules.md  production-integration.md  references.md  safety-case.md  safety-patterns.md  security.md  troubleshooting.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/modules/: arc-acoustic_slam.md  arc-adc.md  arc-aes.md  arc-any.md  arc-arch-riscv.md  arc-arch-xtensa.md  arc-assume.md  arc-audit.md  arc-axi_graph.md  arc-bare_core.md  arc-bft.md  arc-blackbox.md  arc-ble.md  arc-ble_mesh.md  arc-borrow.md  arc-bridge.md  arc-burst.md  arc-bus.md  arc-cache.md  arc-cache_lock.md  arc-can.md  arc-caps.md  arc-capture.md  arc-cert_bundle.md  arc-cfg.md  arc-chaos.md  arc-claim.md  arc-cli.md  arc-cloak.md  arc-clock.md  arc-cnc.md  arc-coap.md  arc-concepts.md  arc-copy.md  arc-core.md  arc-coro.md  arc-count.md  arc-covert.md  arc-crdt.md  arc-crypto.md  (+191 more)
examples/bench/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/bench/main/: CMakeLists.txt  app_main.cpp
examples/bridge/: CMakeLists.txt  README.md
examples/bridge/main/: app_main.cpp
examples/can/: CMakeLists.txt  README.md
examples/can/main/: CMakeLists.txt
examples/copy/: CMakeLists.txt  README.md
examples/copy/main/: CMakeLists.txt  app_main.cpp
examples/count/: CMakeLists.txt  README.md
examples/count/main/: CMakeLists.txt  Kconfig.projbuild
examples/dsp/: CMakeLists.txt  README.md
examples/dsp/main/: CMakeLists.txt  app_main.cpp
examples/dvp/: CMakeLists.txt  README.md
examples/esp32s3/trace/main/: CMakeLists.txt
examples/espnow/: CMakeLists.txt  README.md
examples/etm/: CMakeLists.txt  README.md  partitions_16mb.csv
examples/i2c/: CMakeLists.txt  README.md
examples/i2s/: CMakeLists.txt  README.md
examples/i80/: CMakeLists.txt  README.md
examples/ota/: CMakeLists.txt  README.md
examples/probe/: CMakeLists.txt  README.md
examples/pulse/: CMakeLists.txt  README.md
examples/pwm/: CMakeLists.txt  README.md  env.fish  sdkconfig.defaults
examples/scope/: CMakeLists.txt  README.md
examples/sigma/: CMakeLists.txt  README.md
examples/sleep/: CMakeLists.txt  README.md
examples/space/: CMakeLists.txt  README.md
examples/spi/: CMakeLists.txt  README.md
examples/store/: CMakeLists.txt  README.md  env.fish
examples/temp/: CMakeLists.txt  README.md
examples/timer/: CMakeLists.txt  README.md
examples/trace/: CMakeLists.txt  README.md  env.fish
examples/uart/: CMakeLists.txt  README.md
examples/udp/: CMakeLists.txt  README.md  env.sh  sdkconfig.defaults
examples/udp/main/: CMakeLists.txt  app.hpp  app_main.cpp  cfg.hpp  lane.hpp  link.hpp  net.hpp
main/: CMakeLists.txt  Kconfig.projbuild  app.hpp  app_main.cpp  sdkconfig.defaults
specs/: Consensus.tla  Roles.tla  Spsc.tla
tests/host/: CMakeLists.txt  bench.cpp  fuzz_codecs.cpp  logic.cpp  plane_compile.cpp  safety_patterns_compile.cpp
tests/host/stubs/: esp_async_memcpy.h  esp_attr.h  esp_cache.h  esp_check.h  esp_cpu.h  esp_err.h  esp_heap_caps.h  esp_http_client.h  esp_intr_types.h  esp_littlefs.h  esp_log.h  esp_ota_ops.h  esp_partition.h  esp_spiffs.h  esp_system.h  esp_tls.h  esp_vfs_fat.h  nvs.h  nvs_flash.h  sdkconfig.h  ulp.h  ulp_riscv.h  wear_levelling.h
tests/host/stubs/driver/: rmt_common.h  rmt_encoder.h  rmt_tx.h  spi_master.h  spi_slave.h
tests/host/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
tests/host/stubs/hal/: rmt_types.h
tests/host/stubs/lwip/: sockets.h
tests/host/stubs/soc/: soc_caps.h
tests/host/stubs/xtensa/: xtruntime.h
tests/host/stubs/xtensa/config/: core-isa.h
tools/: arc-audit.go  arc-gen.go  arc-pack-bridge.py  arc-projects.py  arc-prove.sh  arc_audit_test.py  arc_deps_test.py  arc_gen_test.py  arc_projects.py  arc_projects_test.py  check-repo.sh  check_repo_test.py  ci-build-plan.py  ci_build_plan_test.py  clangd-compile-commands.go  clangd-compile-commands.py  clangd_compile_commands_test.py  clean-generated.sh  compile-cost.py  compile-fail-check.py  compile_cost_test.py  compile_fail_test.py  dependabot-policy-check.py  dependabot_policy_test.py  docs-module-pages.py  docs_module_pages_test.py  dump-source.go  dump-source.py  ensure-frameworks.sh  evidence-bundle-check.py  evidence-index.py  evidence-workflow-check.py  evidence_bundle_check_test.py  evidence_index_test.py  evidence_workflow_check_test.py  firmware-evidence-check.py  firmware-manifest.py  firmware_evidence_check_test.py  firmware_manifest_test.py  format.sh  (+40 more)
tools/bridge/: main.go
(+157 files in other folders)
